--- a/style/resume.css
+++ b/style/resume.css
@@ -151,7 +151,7 @@ HEADER
     border-color: #F9C935;
     border-width: 14px;
     border-style: dotted double; }
-    @media only screen and (max-width: 630px) {
+    @media only screen and (max-width: 830px) {
       .heading .title {
         width: 100%; } }
     .heading .title h1 {
@@ -203,15 +203,6 @@ ABOUT ME
     .intro .about-me .description h3,
     .intro .about-me .description p {
       text-align: center; }
-    @media only screen and (min-width: 950px) {
-      .intro .about-me .description {
-        width: 65%;
-        padding-right: 3em; }
-        .intro .about-me .description h2,
-        .intro .about-me .description h3,
-        .intro .about-me .description p {
-          text-align: left;
-          padding-bottom: 0; } }
     .intro .about-me .description h2 {
       line-height: 34px;
       padding-bottom: 0.3em; }
@@ -226,6 +217,15 @@ ABOUT ME
       @media print {
         .intro .about-me .description h3 {
           font-size: 15px; } }
+    @media only screen and (min-width: 950px) {
+      .intro .about-me .description {
+        width: 65%;
+        padding-right: 3em; }
+        .intro .about-me .description h2,
+        .intro .about-me .description h3,
+        .intro .about-me .description p {
+          text-align: left;
+          padding-bottom: 0; } }
 
 .download {
   text-align: center;
